cabal-version:   3.4
name:            esb-fireplace
version:         0.1.0.0
license:         AGPL-3.0-or-later
license-file:    LICENSE
maintainer:      luizamaral306@gmail.com
author:          Luiz Eduardo Amaral
synopsis:
    The FIREPLACEv1.0 allows the use of the `esb` tooling for solving Advent of Code problems.

build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:  Fireplace
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18.2.1,
        optparse-applicative ^>=0.19

test-suite esb-fireplace-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18.2.1,
        tasty ^>=1.5,
        tasty-hunit ^>=0.10,
        esb-fireplace
