cabal-version: 3.12
name:          esb-fireplace
version:       0.1.0.0
license:       AGPL-3.0-or-later
license-file:  LICENSE
maintainer:    luizamaral306@gmail.com
author:        Luiz Eduardo Amaral
synopsis:      Easily build and run haskell code to solve AoC problems.
description:
    The FIREPLACEv1.0 allows the use of the `esb` tooling for solving Advent of Code problems.

category:      Utility
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/luxedo/esb_fireplace-haskell.git

library
    exposed-modules:  Fireplace
    hs-source-dirs:   src
    default-language: GHC2024
    ghc-options:      -Wall
    build-depends:
        time ^>=1.14,
        base ^>=4.21.0.0,
        optparse-applicative ^>=0.19

test-suite esb-fireplace-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: GHC2024
    ghc-options:      -Wall
    build-depends:
        process ^>=1.6.25.0,
        base ^>=4.21.0.0,
        tasty ^>=1.5,
        tasty-hunit ^>=0.10,
        regex-tdfa ^>=1.3,
        esb-fireplace
